[package]
name = "rpg-dice-rust"
description = "An RPG dice rolling library and command line app."
version = "1.1.0"
authors = ["Devin Gunay <devingunay@gmail.com>"]
edition = "2018"
license-file = "LICENSE.md"
repository = "https://github.com/dgunay/rpg-dice-rust"
keywords = ["RPG", "Dice", "Tabletop", "Roll"]
categories = ["Games"]

[lib]
name = "dicelib"
path = "src/lib.rs"

[[bin]]
name = "dice"
path = "src/bin/dice.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rand =  { version = "0.7.3", features = ["small_rng"] }
regex = "1"
lazy_static = "1.4.0"
evalexpr = "5.0.5"
anyhow = "1.0"
thiserror = "1.0"
